IDEA-281190: Apply fixes after review
* Use `CallMapper`
* Use `CallMatcher`
* Do not use `RecursionGuard`
* Use bounded loop to resolve nested `MethodType.methodType` calls
* Add explicit boolean flag to prevent recursion
* Remove JavaLangReflectHandleInvocationTestBase