@@ -135,30 +135,31 @@ class Main {
     MethodHandle methodHandle0 = lookup.findVirtual(Test.class, "foo", methodTypeFromArraysAsList);
     methodHandle0.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
 
-    MethodType methodTypeFromArraysAsListWithClassArray = MethodType.methodType(long.class, Arrays.asList(new Class<?>[]{int.class, long.class}));
-    MethodHandle methodHandle1 = lookup.findVirtual(Test.class, "foo", methodTypeFromArraysAsListWithClassArray);
+    MethodType methodTypeFromListOf = MethodType.methodType(long.class, (List.of(int.class, long.class)));
+    MethodHandle methodHandle1 = lookup.findVirtual(Test.class, "foo", methodTypeFromListOf);
     methodHandle1.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
 
-    MethodType methodTypeFromListOf = MethodType.methodType(long.class, List.of(int.class, long.class));
-    MethodHandle methodHandle2 = lookup.findVirtual(Test.class, "foo", methodTypeFromListOf);
+    MethodHandle methodHandle2 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, MethodType.methodType(Object.class, int.class, long.class)));
     methodHandle2.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
 
-    MethodType methodTypeFromListOfWithClassArray = MethodType.methodType(long.class, List.of(new Class[]{int.class, long.class}));
-    MethodHandle methodHandle3 = lookup.findVirtual(Test.class, "foo", methodTypeFromListOfWithClassArray);
+    MethodHandle methodHandle3 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, new Class<?>[]{int.class, long.class}));
     methodHandle3.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
 
-    MethodHandle methodHandle4 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, MethodType.methodType(Object.class, int.class, long.class)));
+    MethodHandle methodHandle4 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, new Class[]{int.class, long.class}));
     methodHandle4.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
 
-    MethodHandle methodHandle5 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, new Class<?>[]{int.class, long.class}));
+    MethodType nestedMethodType5 = MethodType.methodType(long.class, new Class[]{int.class, long.class});
+    MethodHandle methodHandle5 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, nestedMethodType5));
     methodHandle5.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
 
-    MethodHandle methodHandle6 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, new Class[]{int.class, long.class}));
-    methodHandle6.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
+    List<Class<?>> noWarningsForMutableLists = Arrays.asList(int.class, String.class);
+    noWarningsForMutableLists.set(1, long.class);
+    MethodHandle methodHandle6 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, noWarningsForMutableLists));
+    methodHandle6.invoke(instance, 1, 2L);
 
-    MethodType nestedMethodType7 = MethodType.methodType(long.class, new Class[]{int.class, long.class});
-    MethodHandle methodHandle7 = lookup.findVirtual(Test.class, "foo", MethodType.methodType(long.class, nestedMethodType7));
-    methodHandle7.invoke<warning descr="3 arguments are expected">(instance, 1, 2, 3)</warning>;
+    MethodType noStackOverflowError = MethodType.methodType(long.class, <error descr="Variable 'noStackOverflowError' might not have been initialized">noStackOverflowError</error>);
+    MethodHandle methodHandle7 = lookup.findVirtual(Test.class, "foo", noStackOverflowError);
+    methodHandle7.invoke(instance, 1, 2L);
   }
 
   private static CharSequence charSequence() { return "abc"; }
